tests/errors/init_state/borrow_precondition/mut_borrow_of_never_init_field.sim
struct P: Copy + Drop { x: i64 y: i64 }
fn f() {
  p: P;
  entry:
    p.x = 1;
    p.y = copy p.x;
    p.y = 2;
    return
}
fn g() {
  p: P;
  r: &mut i64;
  entry:
    p.x = 1;
    r = &mut p.y;
    return
}
