tests/errors/init_state/borrow_precondition/mut_borrow_of_never_init_field.err.expected
error: at 15:5: [INIT-BorrowStateMismatch] In function 'g', block 'entry': cannot create &mut of 'p.y': place must be initialized at borrow, but is not yet initialized
    |
 15 |     r = &mut p.y;
    |     ^^^^^^^^^^^^
